fix: make non-input content unselectable
- Add user-select: none to all elements by default
- Allow text selection in input, textarea, select, and contenteditable elements
- Apply same fix to CodeMirror editor container

--- a/src/components/CodeMirrorEditor.css
+++ b/src/components/CodeMirrorEditor.css
@@ -4,6 +4,8 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  user-select: text;
+  -webkit-user-select: text;
 }
 
 .codemirror-container .cm-editor {
